# cmake_ocv

./: .gitattributes  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/soft/wl/cmakeocv/: MainActivity.java
app/src/main/java/soft/wl/function/: FunctionControl.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
